Thu Nov  5 22:13:18 1992  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.01b.  Sending it off to some folks.

	* Lots and lots of changes.  Translated all programs into non-ansi
	C dependance and then went back again when I found some problems
	with my macros.  :-)  Took out all (and I mean all) Antaire
	dependancies and defines.

Thu Oct 22 00:47:18 1992  Gray Watson  (gray at toaster.antaire.com)

	* Ran through most of the debug-flag functionality testing and
	tweaking.  Found some bugs on dblock handling and some messed up
	logic with the way the LOG flags were working.

	* malloc_debug is looking good.  It now outputs C or Bourne shell
	code and seems to work in both environments.  What do sh folks use
	in the place of c-shell aliasing?  I guess use bash.  :-)

Wed Oct 21 03:27:35 1992  Gray Watson  (gray at toaster.antaire.com)

	* Major changes.  I sort of went overboard tonight.  I integrated
	the new malloc_debug program which sets all the debug variables
	for you.  I also added a .mallocrc which you can define with tags
	exactly the functionality you want to happen.  No more levels!!

	* Did some renaming of files, cleaned up some other things,
	had to rework a number of items to get new debug flags working.

Tue Oct 20 18:06:36 1992  Gray Watson  (gray at toaster.antaire.com)

	* Removed useful.h requirements and integrated necessary
	definitions into malloc.h.

	* Transfered malloc.txt documentation into malloc.texinfo.  Boy
	is it nifty!!  And damn easy!!!

	* Major changes to improve general machine independance.  Added
	malloc_mach.h.  Moved alloc.[ch] to malloc.[ch] for sanity
	reasons.

Tue Oct 13 16:14:17 1992  Gray Watson  (gray at toaster.antaire.com)

	* Made various cosmetic changes.  Fixed realloc inbound pointer
	checking per MALLOC_ADDRESS.  Fixed problem with MALLOC_ADDRESS
	initialization to NULL causing free to "find" NULL pointers.  :-)

	* Separated the PERROR debug level and the KILL_SELF level.  Now