@@ -1,0 +1,103 @@
+#
+# Makefile for the Malloc library.
+#
+# $Id: Makefile.all.in,v 1.1 1992/11/10 00:24:38 gray Exp $
+#
+
+# default root installation directory
+prefix = /usr/local
+
+srcdir = @srcdir@
+bindir = $(prefix)/bin
+libdir = $(prefix)/lib
+incdir = $(prefix)/inc
+infodir = $(prefix)/info
+
+# default c-compiler
+CC = @CC@
+
+DEFS =
+INCS = -I$(srcdir)
+LIBS = @LIBS@ -L$(srcdir) -lmalloc
+
+LIBRARY	= libmalloc.a
+UTIL = malloc_debug
+INFOFILE = malloc.info
+
+CCFLAGS = -g
+LDFLAGS = -g
+
+INSTALL = @INSTALL@
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
+INSTALL_DATA = @INSTALL_DATA@
+
+###############################################################################
+# End of system configuration section.
+###############################################################################
+
+SHELL = /bin/sh
+
+HFLS = malloc.h malloc_errno.h malloc_leap.h
+OBJS = chunk.o compat.o error.o heap.o malloc.o malloc_leap.o
+
+CFLAGS = $(CCFLAGS)
+TESTS = malloc_test
+
+all : $(LIBRARY) $(UTIL)
+
+clean :
+	rm -f a.out core *.o *.t
+
+clobber : clean
+	rm -f $(LIBRARY) $(TESTS) $(UTIL)
+
+realclean : clobber
+
+install : $(HFLS) $(LIBRARY) $(UTIL) $(INFOFILES)
+	$(INSTALL_DATA) $(HFLS) $(incdir)
+	$(INSTALL_PROGRAM) $(UTIL) $(bindir)
+	$(INSTALL_DATA) $(LIBRARY) $(libdir)
+	@RANLIB@ $(libdir)/$(LIBRARY)
+#	$(INSTALL_DATA) $(INFOFILES) $(infodir)
+
+$(LIBRARY) : $(OBJS)
+	ar cr $(LIBRARY) $?
+	@RANLIB@ $@
+	- chmod 660 $@
+
+$(UTIL) : malloc_debug.o $(LIBRARY)
+	rm -f $@
+	$(CC) $(LDFLAGS) $@.o $(LIBS)
+	mv a.out $@
+
+tests : $(TESTS)
+
+malloc_test : malloc_test.o $(LIBRARY)
+	rm -f $@
+	$(CC) $(LDFLAGS) malloc_test.o $(LIBS)
+	mv a.out $@
+
+.c.o :
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(DEFS) $(INCS) -c $< -o $@
+
+###############################################################################
+
+#
+# These are dependencies that are automatically generated by make
+# depend.  Please do not edit by hand.
+#
+
+sample.o : sample.c malloc.h malloc_leap.h 
+malloc_test.o : malloc_test.c malloc.h malloc_leap.h compat.h 
+malloc_leap.o : malloc_leap.c malloc.h malloc_leap.h 
+malloc_debug.o : malloc_debug.c malloc.h malloc_leap.h malloc_loc.h compat.h \
+  conf.h debug_tokens.h error.h version.h 
+malloc.o : malloc.c malloc.h malloc_leap.h malloc_loc.h chunk.h compat.h conf.h \
+  error.h error_str.h heap.h malloc_errno.h 
+heap.o : heap.c malloc.h malloc_leap.h malloc_loc.h chunk.h compat.h error.h \
+  heap.h malloc_errno.h 
+error.o : error.c malloc.h malloc_leap.h malloc_loc.h chunk.h compat.h conf.h \
+  error.h 
+compat.o : compat.c malloc.h malloc_leap.h malloc_loc.h conf.h 
+chunk.o : chunk.c malloc.h malloc_leap.h malloc_loc.h chunk.h chunk_loc.h compat.h \
+  conf.h error.h heap.h malloc_errno.h version.h 
