@@ -21,13 +21,13 @@
  * 
  * The author of the program may be contacted at gray.watson@antaire.com
  *
- * $Id: chunk.h,v 1.10 1992/11/06 03:36:26 gray Exp $
+ * $Id: chunk.h,v 1.11 1992/11/10 00:24:45 gray Exp $
  */
 
 #ifndef __CHUNK_H__
 #define __CHUNK_H__
 
-#include "malloc.h"			/* for LOCAL and bool stuff */
+#include "malloc.h"			/* for IMPORT ... */
 
 /*<<<<<<<<<<  The below prototypes are auto-generated by fillproto */
 
