@@ -1,3 +1,10 @@
+Mon Nov  9 19:21:25 1992  Gray Watson  (gray at toaster.antaire.com)
+
+	* Added configure, configure.in, conf.h.in, and Makefile.in to try
+	and conform with autoconf specs.  What a bear.  The documentation
+	for autoconf needs a whole bunch more examples, etc.  Sigh.
+	Removed all the MEMORY and STRING defines, etc.
+
 Thu Nov  5 22:13:18 1992  Gray Watson  (gray at toaster.antaire.com)
 
 	* Released version 1.01b.  Sending it off to some folks.
